--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Willows Games Studios - Hub</title>
+        <title>Willows Games Studios - About</title>
         <link rel="icon" type="image/x-icon" href="Images/icon.png">
         <link rel="stylesheet" type="text/css" href="Css/MainStyle.css" />
         <h1><img src="Images/icon256.png" alt="" width="90", height="90">Willows Games Studios</h1>
@@ -14,38 +14,32 @@
         </div>
     </head>
     <body>
-        <h2>Bienvenue sur Willows Games Studios</h2>
-        <h3>Jeux en ligne</h3>
-        <div class="carousel">
-            <div class="carousel-inner">
-                    <div onclick="window.location.href='https://willows-games-studios.itch.io/fps-game-3d';" class="carousel-item" style="background-color: rgb(61, 61, 61); background-image: url('Images/FPSGame3D.jpg'); background-size: 100% 70%; background-repeat: no-repeat;">
-                        <div style="position: absolute; top: 65%; font-family: Jost_Classic;">
-                            <h4>FPS Game 3D</h4>
-                            <h5>Exemple d'utilisation template FPS Microgame pour apprendre Unity</h5>
-                        </div>
-                    </div>
-                <div onclick="window.location.href='https://willows-games-studios.itch.io/builder-game-project';" class="carousel-item" style="background-color: rgb(61, 61, 61); background-image: url('Images/buildergame3D.png'); background-size: 100% 70%; background-repeat: no-repeat;">
-                    <div style="position: absolute; top: 65%; font-family: Jost_Classic;">
-                        <h4>Builder Game</h4>
-                        <h5>Jeu de construction</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-controls">
-                <span class="prev"></span>
-                <span class="next"></span>
-            </div>
-            <div class="carousel-indicators"></div>
+        <h2>Logiciels</h2>
+        <div class="about">
+            <h6 style="margin: 0 12%; text-align: center;"><img src="Images/unity.png" alt="" width="90", height="90">Unity <p>Unity Engine 2019.4.13f et +</p><button class="button" onclick="window.location.href='https://unity.com/fr';">Unity.com</button></h6>
+            <h6 style="margin: 0 12%; text-align: center;"><img src="Images/visualstudio.png" alt="" width="90", height="90"> Visual Studio <p>Visual Studio Community 2019 et Code</p><button class="button" onclick="window.location.href='https://visualstudio.microsoft.com/fr/';">Microsoft.com</button></h6>
         </div>
-        <script src="Js/carousel.js"></script>
-        <h2>Youtube Live Counter</h2>
-        <h3>Subscribers :</h3>
-        <div class="centre">
-            <iframe height="90px" width="315px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCbjMjuI2IYTkU4spvJlkOOw/embed?style=img%7Bborder-radius%3A50%25%7Dbody%7Bbackground-color%3Argba%28180%2C255%2C240%2C1%29%21important%7D.title%7Bfont-size%3A19px%7D&amp;counter=0" allowfullscreen=""></iframe>
-            <h3>Total Views :</h3>
-            <iframe height="90px" width="315px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCbjMjuI2IYTkU4spvJlkOOw/embed?style=img%7Bborder-radius%3A50%25%7Dbody%7Bbackground-color%3Argba%28180%2C255%2C240%2C1%29%21important%7D.title%7Bfont-size%3A19px%7D&amp;counter=1" allowfullscreen=""></iframe>
-            <h3>Videos :</h3>
-            <iframe class="" height="90px" width="315px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCbjMjuI2IYTkU4spvJlkOOw/embed?style=img%7Bborder-radius%3A50%25%7Dbody%7Bbackground-color%3Argba%28180%2C255%2C240%2C1%29%21important%7D.title%7Bfont-size%3A19px%7D&amp;counter=2" allowfullscreen=""></iframe>
+        <br><br>
+        <h2>Willows Games Studios</h2>
+        <div class="about">
+            <h6 style="margin: 0 12%; text-align: center;"><img src="Images/icon256.png" alt="" width="90", height="90">Logo <p>Logo "saule" par Icones8</p><button class="button" onclick="window.location.href='https://icons8.com/icon/65390/saule';">Sur Icones8</button></h6>
+        </div>
+        <br><br>
+        <div class="about">
+            <h6 style="margin: 0 12%; text-align: center;"><img src="Images/Icons8_Logo.png" alt="" width="90", height="90">Icones <p>Icones de bas de pages par Icones8</p></h6>
+        </div>
+        <div class="buttonHeader">
+            <button class="button" target="_blank" onclick="window.location.href='https://icons8.com/icon/b9_NzGK1H_Pe/itch-io';">Itch.io</button>
+            <button class="button" target="_blank" onclick="window.location.href='https://icons8.com/icon/19318/youtube';">YouTube</button>
+            <button class="button" target="_blank" onclick="window.location.href='https://icons8.com/icon/pOa8st0SGd5C/steam-circled';">Steam</button>
+            <br>
+            <button class="button" target="_blank" onclick="window.location.href='https://icons8.com/icon/106562/github';">GitHub</button>
+            <button class="button" target="_blank" onclick="window.location.href='https://icons8.com/icon/30998/discord';">Discord</button>
+            <button class="button" target="_blank" onclick="window.location.href='https://icons8.com/icon/uLWV5A9vXIPu/facebook';">Facebook</button>
+        </div>
+        <br><br>
+        <div class="about">
+            <h6 style="margin: 0 12%; text-align: center;"><img src="Images/settings.png" alt="" width="90", height="90"><br> Willows Games Studios - par Wislly<p>START IN 2019, ONLINE SINCE 2022</p></h6>
         </div>
         <br><br><br>
     </body>
