--- a/Download.html
+++ b/Download.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Willows Games Studios - Hub</title>
+        <title>Willows Games Studios - Download</title>
         <link rel="icon" type="image/x-icon" href="Images/icon.png">
         <link rel="stylesheet" type="text/css" href="Css/MainStyle.css" />
         <h1><img src="Images/icon256.png" alt="" width="90", height="90">Willows Games Studios</h1>
@@ -14,38 +14,11 @@
         </div>
     </head>
     <body>
-        <h2>Bienvenue sur Willows Games Studios</h2>
-        <h3>Jeux en ligne</h3>
-        <div class="carousel">
-            <div class="carousel-inner">
-                    <div onclick="window.location.href='https://willows-games-studios.itch.io/fps-game-3d';" class="carousel-item" style="background-color: rgb(61, 61, 61); background-image: url('Images/FPSGame3D.jpg'); background-size: 100% 70%; background-repeat: no-repeat;">
-                        <div style="position: absolute; top: 65%; font-family: Jost_Classic;">
-                            <h4>FPS Game 3D</h4>
-                            <h5>Exemple d'utilisation template FPS Microgame pour apprendre Unity</h5>
-                        </div>
-                    </div>
-                <div onclick="window.location.href='https://willows-games-studios.itch.io/builder-game-project';" class="carousel-item" style="background-color: rgb(61, 61, 61); background-image: url('Images/buildergame3D.png'); background-size: 100% 70%; background-repeat: no-repeat;">
-                    <div style="position: absolute; top: 65%; font-family: Jost_Classic;">
-                        <h4>Builder Game</h4>
-                        <h5>Jeu de construction</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-controls">
-                <span class="prev"></span>
-                <span class="next"></span>
-            </div>
-            <div class="carousel-indicators"></div>
-        </div>
-        <script src="Js/carousel.js"></script>
-        <h2>Youtube Live Counter</h2>
-        <h3>Subscribers :</h3>
-        <div class="centre">
-            <iframe height="90px" width="315px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCbjMjuI2IYTkU4spvJlkOOw/embed?style=img%7Bborder-radius%3A50%25%7Dbody%7Bbackground-color%3Argba%28180%2C255%2C240%2C1%29%21important%7D.title%7Bfont-size%3A19px%7D&amp;counter=0" allowfullscreen=""></iframe>
-            <h3>Total Views :</h3>
-            <iframe height="90px" width="315px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCbjMjuI2IYTkU4spvJlkOOw/embed?style=img%7Bborder-radius%3A50%25%7Dbody%7Bbackground-color%3Argba%28180%2C255%2C240%2C1%29%21important%7D.title%7Bfont-size%3A19px%7D&amp;counter=1" allowfullscreen=""></iframe>
-            <h3>Videos :</h3>
-            <iframe class="" height="90px" width="315px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCbjMjuI2IYTkU4spvJlkOOw/embed?style=img%7Bborder-radius%3A50%25%7Dbody%7Bbackground-color%3Argba%28180%2C255%2C240%2C1%29%21important%7D.title%7Bfont-size%3A19px%7D&amp;counter=2" allowfullscreen=""></iframe>
+        <h2>Téléchargements</h2>
+        <div class="buttonHeader">
+            <h6 style="margin: 0 12%; text-align: center;"><img src="Images/icon256.png" alt="" width="90", height="90">Launcher<p>Willows Games Studios launcher : regroupe les jeux et les met à jour</p><button disabled class="button" onclick="window.location.href='#';">bientôt</button></h6>
+            <h6 style="margin: 0 12%; text-align: center;"><img src="Images/steam.png" alt="" width="90", height="90">Steam<p>Jeux disponible sur Steam</p><button class="button" disabled onclick="window.location.href='#';">bientôt</button></h6>
+            <h6 style="margin: 0 12%; text-align: center;"><img src="Images/github.png" alt="" width="90", height="90">GitHub<p>Fichiers, Tutos et projets sur GitHub</p><button class="button" onclick="window.location.href='https://github.com/WillowsGamesStudios';">GitHub.com</button></h6>
         </div>
         <br><br><br>
     </body>
