--- a/About.html
+++ b/About.html
@@ -45,12 +45,12 @@
     </body>
     <footer>
         <br><br><br>
-        <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Itch.io" href="https://willows-games-studios.itch.io/"><img src="images/itch.png" alt="" width="70", height="70"></a>
-        <a class="FollowsButtons" target="_blank" title="Willows Games Studios - YouTube" href="https://www.youtube.com/@WillowsGamesStudios?sub_confirmation=1"><img src="images/youtube.png" alt="" width="75", height="75"></a>
-        <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Steam" href="https://steamcommunity.com/id/WillowsGamesStudios/"><img src="images/steam.png" alt="" width="75", height="75"></a>
-        <a class="FollowsButtons" target="_blank" title="Willows Games Studios - GitHub" href="https://github.com/WillowsGamesStudios"><img src="images/github.png" alt="" width="80", height="80"></a>
-        <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Discord" href="https://discord.gg/HNRXywaKUh"><img src="images/discord.png" alt="" width="75", height="75"></a>
-        <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Facebook" href="https://www.facebook.com/profile.php?id=100088417490594"><img src="images/facebook.png" alt="" width="75", height="75"></a>
+        <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Itch.io" href="https://willows-games-studios.itch.io/"><img src="Images/itch.png" alt="" width="70", height="70"></a>
+        <a class="FollowsButtons" target="_blank" title="Willows Games Studios - YouTube" href="https://www.youtube.com/@WillowsGamesStudios?sub_confirmation=1"><img src="Images/youtube.png" alt="" width="75", height="75"></a>
+        <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Steam" href="https://steamcommunity.com/id/WillowsGamesStudios/"><img src="Images/steam.png" alt="" width="75", height="75"></a>
+        <a class="FollowsButtons" target="_blank" title="Willows Games Studios - GitHub" href="https://github.com/WillowsGamesStudios"><img src="Images/github.png" alt="" width="80", height="80"></a>
+        <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Discord" href="https://discord.gg/HNRXywaKUh"><img src="Images/discord.png" alt="" width="75", height="75"></a>
+        <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Facebook" href="https://www.facebook.com/profile.php?id=100088417490594"><img src="Images/facebook.png" alt="" width="75", height="75"></a>
         <p>© Logo "Saule" by icones8.fr <a href="https://icons8.com/icon/65390/saule" target="_blank">Saule icones8</a> | Free for personal and commercial use under the CCA 3.0 license : <a href="https://icones8.fr/license" target="_blank">icones8.fr/license</a>
             <br>
             <br>
