--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Willows Games Studios - Hub</title>
+        <meta http-equiv="cache-control" content="no-cache" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="-1" />
         <link rel="icon" type="image/x-icon" href="Images/icon.png">
         <link rel="stylesheet" type="text/css" href="Css/MainStyle.css" />
         <h1><img src="Images/icon256.png" alt="" width="90", height="90">Willows Games Studios</h1>
