--- a/About.html
+++ b/About.html
@@ -2,9 +2,19 @@
 <html>
     <head>
         <title>Willows Games Studios - About</title>
+        <meta name="google-site-verification" content="TqXZjsCIqUyeXnwoJLGH_QXOtwLMdGjyRgul02C9KqE" />
+        <meta name="Revisit-After" content="5 days">
+        <meta name="Rating" content="general">
+        <meta name="Distribution" content="global">
+        <meta name="Category" content="games, software">
         <meta http-equiv="cache-control" content="no-cache" />
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="-1" />
+        <meta name="robots" content="index"/>
+        <meta charset="UTF-8">
+        <meta name="keywords" content="unity, unity game, unity engine, unity dev, unity game dev, willows games studios, willows game, willows, studios, willows games studio, willow game studio, unity willows, unity game studio, unity time lapse, unity web, unity site, unity jeu, unity jeux, jeu, jeux, wislly, unity wislly, wislly studio, wislly game, wislly adventure">
+        <meta name="author" content="Wislly, Willows Games Studios"/>
+        <meta name="description" content="Willows Games Studios est un studio de développement logiciel indépandent qui utilise le moteur unity et le logiciel visual studio.">
         <link rel="icon" type="image/x-icon" href="Images/icon.png">
         <link rel="stylesheet" type="text/css" href="Css/MainStyle.css" />
         <h1><img src="Images/icon256.png" alt="" width="90", height="90">Willows Games Studios</h1>
