--- a/Download.html
+++ b/Download.html
@@ -43,12 +43,12 @@
         <a class="FollowsButtons" target="_blank" title="Willows Games Studios - GitHub" href="https://github.com/WillowsGamesStudios"><img src="Images/github.png" alt="" width="80", height="80"></a>
         <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Discord" href="https://discord.gg/HNRXywaKUh"><img src="Images/discord.png" alt="" width="75", height="75"></a>
         <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Facebook" href="https://www.facebook.com/profile.php?id=100088417490594"><img src="Images/facebook.png" alt="" width="75", height="75"></a>
-        <p>© Logo "Saule" by icones8.fr <a href="https://icons8.com/icon/65390/saule" target="_blank">Saule icones8</a> | Free for personal and commercial use under the CCA 3.0 license : <a href="https://icones8.fr/license" target="_blank">icones8.fr/license</a>
+        <p>© Logo by <a href="https://icons8.fr" target="_blank">icones8.fr</a> | Free for personal and commercial use under the CCA 3.0 license : <a href="https://icones8.fr/license" target="_blank">icones8.fr/license</a>
             <br>
             <br>
-            © Icons on <a href="https://www.flaticon.com/" target="_blank">icones8.fr</a> | More info : <a href="About.html" target="_blank">About page</a>
+            © More info : <a href="About.html" target="_blank">About page</a>
             <br>
-            <br>© Made by Willows Games Studios (Wislly) <a href="About.html" target="_blank">HTML, CSS, js | with Visual Studio</a>
+            <br>© Made by Willows Games Studios (Wislly) <a href="About.html" target="_blank">HTML, CSS, JS | with Visual Studio and Visual Studio Code</a>
             <br>
         </p>
     </footer>
