--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Willows Games Studios - Hub</title>
-        <meta name="google-site-verification" content="TqXZjsCIqUyeXnwoJLGH_QXOtwLMdGjyRgul02C9KqE" />
+        <title>Willow Games Studio - Home</title>
         <meta name="Revisit-After" content="5 days">
         <meta name="Rating" content="general">
         <meta name="Distribution" content="global">
@@ -17,13 +16,16 @@
         <meta name="description" content="Willows Games Studios est un studio de développement logiciel indépandent qui utilise le moteur unity et le logiciel visual studio.">
         <link rel="icon" type="image/x-icon" href="Images/icon.png">
         <link rel="stylesheet" type="text/css" href="Css/MainStyle.css" />
-        <h1><img src="Images/icon256.png" alt="" width="90", height="90">Willows Games Studios</h1>
+        <div class="Header">
+            <h1><img src="Images/icon256.png" alt="" width="90", height="90">Willow Games Studio - Home
+            <button class="button" onclick="window.location.href='index.html';">Menu</button></h1>
+        </div>
         <div class="buttonHeader">
-            <button class="button" onclick="window.location.href='index.html';">Menu</button> 
+            <button class="button" onclick="window.location.href='index.html';">Menu</button>
             <button class="button" onclick="window.location.href='Games.html';">Jeux</button>
-            <button class="button" onclick="window.location.href='About.html';">About</button>
+            <button class="button" onclick="window.location.href='About.html';">Info</button>
             <button class="button" onclick="window.location.href='Tuto.html';">Tuto</button>
-            <button class="button" onclick="window.location.href='Download.html';">Download</button>
+            <button class="button" onclick="window.location.href='Download.html';">Téléchargements</button>
         </div>
     </head>
     <body>
@@ -31,16 +33,16 @@
         <h3>Jeux en ligne</h3>
         <div class="carousel">
             <div class="carousel-inner">
-                    <div onclick="window.location.href='https://willows-games-studios.itch.io/fps-game-3d';" class="carousel-item" style="background-color: rgb(61, 61, 61); background-image: url('Images/FPSGame3D.jpg'); background-size: 100% 70%; background-repeat: no-repeat;">
+                    <div onclick="window.location.href='#';" class="carousel-item" style="background-color: rgb(61, 61, 61); background-image: url('Images/FPSGame3D.jpg'); background-size: 100% 70%; background-repeat: no-repeat;">
                         <div style="position: absolute; top: 65%; font-family: Jost_Classic;">
-                            <h4>FPS Game 3D</h4>
-                            <h5>Exemple d'utilisation template FPS Microgame pour apprendre Unity</h5>
+                            <h4>TITRE</h4>
+                            <h5>text</h5>
                         </div>
                     </div>
-                <div onclick="window.location.href='https://willows-games-studios.itch.io/builder-game-project';" class="carousel-item" style="background-color: rgb(61, 61, 61); background-image: url('Images/buildergame3D.png'); background-size: 100% 70%; background-repeat: no-repeat;">
+                <div onclick="window.location.href='#';" class="carousel-item" style="background-color: rgb(61, 61, 61); background-image: url('Images/buildergame3D.png'); background-size: 100% 70%; background-repeat: no-repeat;">
                     <div style="position: absolute; top: 65%; font-family: Jost_Classic;">
-                        <h4>Builder Game</h4>
-                        <h5>Jeu de construction</h5>
+                        <h4>TITRE</h4>
+                        <h5>text</h5>
                     </div>
                 </div>
             </div>
@@ -51,14 +53,14 @@
             <div class="carousel-indicators"></div>
         </div>
         <script src="Js/carousel.js"></script>
-        <h2>Youtube Live Counter</h2>
+        <h2>Youtube Live :</h2>
         <h3>Subscribers :</h3>
         <div class="centre">
-            <iframe height="90px" width="315px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCbjMjuI2IYTkU4spvJlkOOw/embed?style=img%7Bborder-radius%3A50%25%7Dbody%7Bbackground-color%3Argba%28180%2C255%2C240%2C1%29%21important%7D.title%7Bfont-size%3A19px%7D&amp;counter=0" allowfullscreen=""></iframe>
+            <iframe height="250px" width="100%" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCbjMjuI2IYTkU4spvJlkOOw/embed?counter=0&fullscreen=true&style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D.odoParrent%7Bcolor%3A+rgba%28255%2C255%2C255%2C1%29%7D&odoUpColor=rgba%2873%2C229%2C59%2C1%29&odoDownColor=rgba%28255%2C0%2C13%2C1%29" allowfullscreen=""></iframe>
             <h3>Total Views :</h3>
-            <iframe height="90px" width="315px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCbjMjuI2IYTkU4spvJlkOOw/embed?style=img%7Bborder-radius%3A50%25%7Dbody%7Bbackground-color%3Argba%28180%2C255%2C240%2C1%29%21important%7D.title%7Bfont-size%3A19px%7D&amp;counter=1" allowfullscreen=""></iframe>
+            <iframe height="250px" width="100%" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCbjMjuI2IYTkU4spvJlkOOw/embed?counter=1&fullscreen=true&style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D.odoParrent%7Bcolor%3A+rgba%28255%2C255%2C255%2C1%29%7D&odoUpColor=rgba%2873%2C229%2C59%2C1%29&odoDownColor=rgba%28255%2C0%2C13%2C1%29" allowfullscreen=""></iframe>
             <h3>Videos :</h3>
-            <iframe class="" height="90px" width="315px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCbjMjuI2IYTkU4spvJlkOOw/embed?style=img%7Bborder-radius%3A50%25%7Dbody%7Bbackground-color%3Argba%28180%2C255%2C240%2C1%29%21important%7D.title%7Bfont-size%3A19px%7D&amp;counter=2" allowfullscreen=""></iframe>
+            <iframe height="250px" width="100%" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCbjMjuI2IYTkU4spvJlkOOw/embed?counter=2&fullscreen=true&style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D.odoParrent%7Bcolor%3A+rgba%28255%2C255%2C255%2C1%29%7D&odoUpColor=rgba%2873%2C229%2C59%2C1%29&odoDownColor=rgba%28255%2C0%2C13%2C1%29" allowfullscreen=""></iframe>
         </div>
         <br><br><br>
     </body>
@@ -70,12 +72,14 @@
         <a class="FollowsButtons" target="_blank" title="Willows Games Studios - GitHub" href="https://github.com/WillowsGamesStudios"><img src="Images/github.png" alt="" width="80", height="80"></a>
         <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Discord" href="https://discord.gg/HNRXywaKUh"><img src="Images/discord.png" alt="" width="75", height="75"></a>
         <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Facebook" href="https://www.facebook.com/profile.php?id=100088417490594"><img src="Images/facebook.png" alt="" width="75", height="75"></a>
-        <p>© Logo "Saule" by icones8.fr <a href="https://icons8.com/icon/65390/saule" target="_blank">Saule icones8</a> | Free for personal and commercial use under the CCA 3.0 license : <a href="https://icones8.fr/license" target="_blank">icones8.fr/license</a>
+        <p></a>
             <br>
             <br>
-            © Icons on <a href="https://www.flaticon.com/" target="_blank">icones8.fr</a> | More info : <a href="About.html" target="_blank">About page</a>
+            © More info : <a href="About.html" target="_blank">About page</a>
             <br>
-            <br>© Made by Willows Games Studios (Wislly) <a href="About.html" target="_blank">HTML, CSS, js | with Visual Studio</a>
+            <br>© Made by Willows Games Studios (Wislly) <a href="About.html" target="_blank">HTML, CSS, JS | with Visual Studio and Visual Studio Code</a>
+            <br>
+            <br>
             <br>
         </p>
     </footer>
