--- a/²².html
+++ b/²².html
@@ -26,12 +26,12 @@
         <a class="FollowsButtons" target="_blank" title="Willows Games Studios - GitHub" href="https://willows-games-studios.itch.io/"><span><img src="images/github.png" alt="" width="75", height="75"></span></a>
         <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Discord" href="https://willows-games-studios.itch.io/"><span><img src="images/discord.png" alt="" width="75", height="75"></span></a>
         <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Facebook" href="https://willows-games-studios.itch.io/"><span><img src="images/facebook.png" alt="" width="75", height="75"></span></a>
-        <p>© Logo "Saule" by icones8.fr <a href="https://icons8.com/icon/65390/saule" target="_blank">Saule icones8</a> | Free for personal and commercial use under the CCA 3.0 license : <a href="https://icones8.fr/license" target="_blank">icones8.fr/license</a>
+        <p>© Logo by <a href="https://icons8.fr" target="_blank">icones8.fr</a> | Free for personal and commercial use under the CCA 3.0 license : <a href="https://icones8.fr/license" target="_blank">icones8.fr/license</a>
             <br>
             <br>
-            © Icons on <a href="https://www.flaticon.com/" target="_blank">flaticon.com</a> | Free for personal and commercial use under the CCA 3.0 license : <a href="https://icones8.fr/license" target="_blank">icones8.fr/license</a>
+            © More info : <a href="About.html" target="_blank">About page</a>
             <br>
-            <br>© Made by Willows Games Studios (Wislly) <a href="About.html" target="_blank">HTML, CSS, js | with Visual Studio</a>
+            <br>© Made by Willows Games Studios (Wislly) <a href="About.html" target="_blank">HTML, CSS, JS | with Visual Studio and Visual Studio Code</a>
             <br>
         </p>
     </footer>
