--- a/About.html
+++ b/About.html
@@ -30,14 +30,10 @@
         <h2>Logiciels</h2>
         <div class="about">
             <h6 style="margin: 0 12%; text-align: center;"><img src="Images/unity.png" alt="" width="90", height="90">Unity <p>Unity Engine 2019.4.13f et +</p><button class="button" onclick="window.location.href='https://unity.com/fr';">Unity.com</button></h6>
-            <h6 style="margin: 0 12%; text-align: center;"><img src="Images/visualstudio.png" alt="" width="90", height="90"> Visual Studio <p>Visual Studio Community 2019 et Code</p><button class="button" onclick="window.location.href='https://visualstudio.microsoft.com/fr/';">Microsoft.com</button></h6>
+            <h6 style="margin: 0 12%; text-align: center;"><img src="Images/visualstudio.png" alt="" width="90", height="90"> Visual Studio <p>Visual Studio Community 2019 et Visual Studio Code</p><button class="button" onclick="window.location.href='https://visualstudio.microsoft.com/fr/';">Microsoft.com</button></h6>
         </div>
         <br><br>
-        <h2>Willows Games Studios</h2>
-        <div class="about">
-            <h6 style="margin: 0 12%; text-align: center;"><img src="Images/icon256.png" alt="" width="90", height="90">Logo <p>Logo "saule" par Icones8</p><button class="button" onclick="window.location.href='https://icons8.com/icon/65390/saule';">Sur Icones8</button></h6>
-        </div>
-        <br><br>
+        <h2>Site Web</h2>
         <div class="about">
             <h6 style="margin: 0 12%; text-align: center;"><img src="Images/Icons8_Logo.png" alt="" width="90", height="90">Icones <p>Icones de bas de pages par Icones8</p></h6>
         </div>
@@ -64,12 +60,12 @@
         <a class="FollowsButtons" target="_blank" title="Willows Games Studios - GitHub" href="https://github.com/WillowsGamesStudios"><img src="Images/github.png" alt="" width="80", height="80"></a>
         <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Discord" href="https://discord.gg/HNRXywaKUh"><img src="Images/discord.png" alt="" width="75", height="75"></a>
         <a class="FollowsButtons" target="_blank" title="Willows Games Studios - Facebook" href="https://www.facebook.com/profile.php?id=100088417490594"><img src="Images/facebook.png" alt="" width="75", height="75"></a>
-        <p>© Logo "Saule" by icones8.fr <a href="https://icons8.com/icon/65390/saule" target="_blank">Saule icones8</a> | Free for personal and commercial use under the CCA 3.0 license : <a href="https://icones8.fr/license" target="_blank">icones8.fr/license</a>
+        <p>© Logo by <a href="https://icons8.fr" target="_blank">icones8.fr</a> | Free for personal and commercial use under the CCA 3.0 license : <a href="https://icones8.fr/license" target="_blank">icones8.fr/license</a>
             <br>
             <br>
-            © Icons on <a href="https://www.flaticon.com/" target="_blank">icones8.fr</a> | More info : <a href="About.html" target="_blank">About page</a>
+            © More info : <a href="About.html" target="_blank">About page</a>
             <br>
-            <br>© Made by Willows Games Studios (Wislly) <a href="About.html" target="_blank">HTML, CSS, js | with Visual Studio</a>
+            <br>© Made by Willows Games Studios (Wislly) <a href="About.html" target="_blank">HTML, CSS, JS | with Visual Studio and Visual Studio Code</a>
             <br>
         </p>
     </footer>
